<resources>
    <string name="app_name">MangEat</string>
    <string name="email_hint">Inserisci email</string>
    <string name="password_hint">Inserisci password</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="email_error">Indirizzo email non valido</string>
    <string name="password_error">Password non valida</string>
    <string name="login_ok">Login effettuato con successo</string>
    <string name="confirm_password">Conferma password</string>
    <string name="ins_nome">Nome</string>
    <string name="ins_cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ricordami">Ricordami</string>
    <string name="checkout">Checkout</string>
    <string name="min_ordine">Ordine minimo: € </string>
    <string name="pizza">pizza</string>
    <string name="menu">Menù</string>
    <string name="view_mode">viewMode</string>
    <string name="prezzo">€</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="totale">Totale: €</string>
    <string name="paga">Vai al pagamento</string>
    <string name="x">x</string>
    <string name="cancella_dialog">Vuoi davvero eliminare questi panini?</string>
    <string name="si">Si</string>
    <string name="sotto_min_ordine">Non posso eliminare questo elemento perchè scenderesti sotto il minimo d\'ordine!</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>


</resources>
