<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/menu_nome_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="cheesburger"
            android:layout_weight="5"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/menu_prezzo_tv"
            android:text="@string/prezzo"
            android:layout_weight="2"
            android:gravity="center_vertical"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:id="@+id/minus_btn"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:gravity="center"
            android:id="@+id/numero_tv"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:id="@+id/plus_btn"/>

    </LinearLayout>


</android.support.v7.widget.CardView>