<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header"
        android:weightSum="3"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/check_img_iv"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/pizza"
            android:scaleType="centerCrop"
            android:src="@drawable/burgerking" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/check_nome_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="20sp"
                android:text="@string/min_ordine" />
            <TextView
                android:id="@+id/check_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/min_ordine"
                />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/checkout_rv"
        android:layout_below="@id/header"
        android:layout_above="@id/footer">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/totale" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/check_totale_tv"
                android:text="0.00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:text="@string/min_ordine" />

            <TextView
                android:id="@+id/check_min_order_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="0.00" />

        </LinearLayout>

        <Button
            android:id="@+id/check_paga_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/paga"
            android:gravity="center"
            android:padding="15dp"/>

    </LinearLayout>

</RelativeLayout>